- removed testimonial commit and updated url on gif - fixed sidebar item alignment issue on mobile

--- a/public/css/responsive.css
+++ b/public/css/responsive.css
@@ -322,6 +322,7 @@
         display: flex;
         gap: 10px;
         flex-wrap: wrap;
+        justify-content: center;
     }
 
     dialog .message>button {
